--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,6 +12,7 @@ body {
 	background: #657691;
 	margin-bottom:2px;
 }
+
 #natmeth img {
 	height: 25px;
 }
@@ -25,27 +26,35 @@ body {
 	color: white;
 	margin-bottom:2px;
 }
+
+/* plot container and title, plot and caption */
+.plotbox {
+	margin: 20px 0 40px;
+}
 .title {
 	clear: both;
 	padding: 0px 0 5px 10px;
 	margin-bottom: 5px;
-	background: #f8f8f8;
-	border-top: 1px solid #ccc;
+	/*background: #f8f8f8;*/
+	border-top: 1.5px solid #666;
 	color: #333;
 }
 .plot {
-	margin-bottom:10px;
+	margin: 15px 0 10px;
 	text-align:left;
 }
 .caption {
 	font-size: 90%;
-	padding-left: 25px;
+	padding-left: 0px;
 	color: #666;
-	margin-bottom: 3em;
+	margin-bottom: 0em;
 }
 
-p {
-	margin: 0 0 0.5em 0;
+.copy p {
+	margin: 0 0 0.5em 0;	
+}
+.affiliations p {
+	margin: 0;
 }
 
 .caption p::before {
@@ -54,11 +63,14 @@ p {
   color: #333; /*#ec008c;*/
 }
 
+/* Pane page title */
 h3 {
 	color: #333;
 	font-size: 150%;
 	margin: 0 0 0.5em 0;
 }
+
+/* KEY OBSERVATIONS */
 h4 {
 	text-transform: uppercase;
 	font-size: 90%;
@@ -66,6 +78,8 @@ h4 {
 	color: #333;
 	margin: 1em 0 0.25em 0;
 }
+
+/* "Supplemental Figure N" in figure header */
 h5 {
 	font-weight: normal;
 	font-size: 100%;
@@ -73,6 +87,46 @@ h5 {
 	padding-bottom: 0px;
 	
 }
+
 h5 p {
 	margin: 3px 0;
+}
+
+/* parameter table container and title */
+div.parameters {
+	background: rgb(250,250,250);
+	float: right;
+	min-width: 175px;
+	padding: 10px 20px;
+	margin: 0 0 10px 10px;
+	border: 2px solid #e3e3e3;
+	border-radius: 4px;
+}
+
+div.parameters div {
+	margin:  0;
+	padding: 0;
+	margin-bottom: 0.5em;
+	padding-bottom: 0.25em;
+	font-weight: bold;
+	text-align: center;
+	border-bottom: 1px solid #ccc;
+	font-size: 90%;
+}
+
+table {
+
+}
+
+
+table tr {
+	padding: 10px 0;
+}
+table tr td:first-child {
+	color: #666;
+	padding-right: 10px;
+	text-align: right;
+}
+table tr td:first-child td {
+	text-align:left;
 }
