--- a/www/css/style.css
+++ b/www/css/style.css
@@ -30,12 +30,11 @@ body {
 /* plot container and title, plot and caption */
 .plotbox {
 	margin: 20px 0 40px;
+	padding: 0;
 }
 .title {
-	clear: both;
-	padding: 0px 0 5px 10px;
+	padding: 0 0 5px 0;
 	margin-bottom: 5px;
-	/*background: #f8f8f8;*/
 	border-top: 1.5px solid #666;
 	color: #333;
 }
@@ -84,7 +83,8 @@ h5 {
 	font-weight: normal;
 	font-size: 100%;
 	color: #333;
-	padding-bottom: 0px;
+	padding: 0;
+	margin-top: 0.5em;
 	
 }
 
